# yubikey-personalization

./: .gitignore  .gitmodules  .svnignore  .travis.yml  69-yubikey-systemd.rules  69-yubikey.rules  70-yubikey.rules  AUTHORS  BLURB  COPYING  Makefile.am  NEWS  README  build-and-test.sh  configure.ac  libykpers-1.map  selftest.c  sha-private.h  sha1.c  sha384-512.c  ykchalresp.1  ykchalresp.1.adoc  ykchalresp.c  ykinfo.1  ykinfo.1.adoc  ykinfo.c  ykpbkdf2.c  ykpbkdf2.h  ykpers-1.pc.in  ykpers-args.c  ykpers-args.h  ykpers-json.c  ykpers-json.h  ykpers-nojson.c  ykpers-version.c  ykpers-version.h.in  ykpers.c  ykpers.h  ykpers4mac.mk  ykpers4win.mk  (+5 more)
.github/workflows/: codeql-analysis.yml  scan.yml
common/: aes128.c  aes128.h  ykdef.h  ykutil.c  ykutil.h  yubikey.c  yubikey.h
contrib/: README  draft-josefsson-yubikey-config.xml  oath-unlock-reprogram.sh  programming.sh
doc/: Compatibility.asciidoc  Make-Release.asciidoc  Todo.asciidoc  USB-Hid-Issue.asciidoc  Windows-Build.asciidoc
docs/: 0README  quirks-and-workarounds.txt
m4/: ld-version-script.m4
man/: ykchalresp.1.adoc  ykinfo.1.adoc  ykpersonalize.1.adoc
notes/: make-release.txt
rfc4634/: hmac.c  sha.h  sha224-256.c  usha.c
tests/: Makefile.am  selftest.c  test_args_to_config.c  test_json.c  test_key_generation.c  test_ndef_construction.c  test_threaded_calls.c  test_yk_utilities.c  test_ykpbkdf2.c  ykpers-args.c  ykpers-args.h
ykcore/: Makefile.am  ykcore.c  ykcore.h  ykcore_backend.h  ykcore_hidapi.c  ykcore_lcl.h  ykcore_libusb-1.0.c  ykcore_libusb.c  ykcore_osx.c  ykcore_stub.c  ykcore_win32.c  ykcore_windows.c  ykdef.h  ykstatus.c  ykstatus.h  yktsd.h
